# TextCorrector

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp  text.cpp  text.h
src/wordbook/: CMakeLists.txt  wordbook.cpp  wordbook.h  wordbook_p.h
test/: CMakeLists.txt
test/wordbook_test/: CMakeLists.txt  wordbook_test.cpp
